# duckize

./: Cargo.toml  LICENSE  README.md
samples/: customer_orders.csv  employee_data.csv  financial_report.csv  sales_data.csv  weather_data.csv
src/: app.rs  data_preview.rs  duckdb_manager.rs  file_browser.rs  main.rs  table_viewer.rs  ui.rs
