[package]
name = "duckize"
version = "0.1.0"
description = "A modern, minimal TUI for taming your tabular data with the elegance of DuckDB and the power of Rust."
authors = ["nash1111 <nash1111@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
duckdb = { version = "1.1.1", features = ["bundled"] }
polars = { version = "0.44.2", features = ["csv", "lazy"] }
calamine = "0.26.1"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
